Refactor student management system for improved usability
Significantly refactored `Alumno.cs` to enhance student record management with constants, a structured data approach, and improved methods for adding, modifying, and deleting records. Updated `Program.cs` to integrate the new structure and added example records for testing. Created `Helpers.cs` for common functionalities and added new menu classes to improve user interface and separation of concerns. Overall, these changes enhance functionality, maintainability, and user experience.

--- a/TEO_EF.csproj
+++ b/TEO_EF.csproj
@@ -43,6 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Helpers.cs" />
+    <Compile Include="Menu\MenuEliminar.cs" />
+    <Compile Include="Menu\MenuPrincipal.cs" />
+    <Compile Include="Menu\MenuModificar.cs" />
+    <Compile Include="Menu\MenuNotas.cs" />
+    <Compile Include="Menu\MenuOrden.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
